render.yaml を更新

--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,27 @@
-services:
+　services:
   - type: web
-    name: god-app
+    name: godfield-game
     env: static
-    region: oregon
-    plan: free
-    buildCommand: npm install && npm run build
-    staticPublishPath: ./dist
+    branch: main
+    buildCommand: echo "Static site deployment"
+    staticPublishPath: ./
+    headers:
+      - path: /main.dart.js
+        name: Cache-Control
+        value: public, max-age=31536000, immutable
+      - path: /images/*
+        name: Cache-Control
+        value: public, max-age=31536000, immutable
+      - path: /*.png
+        name: Cache-Control
+        value: public, max-age=31536000
+      - path: /index.html
+        name: Cache-Control
+        value: public, max-age=0, must-revalidate
+      - path: /*
+        name: X-Content-Type-Options
+        value: nosniff
+      - path: /*
+        name: X-Frame-Options
+        value: SAMEORIGIN
     autoDeploy: true
